=== 0.5 ===
2011-09-19  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/python.py (VirtualenvMixin.create_virtualenv):
    Added virtualenv_error_list. Not sure how helpful this is, but it
    works at catching warnings/errors.

* mozharness/base/script.py (ShellMixin.run_command):
    Changed halt_on_failure behavior.  Was dying if num_errors; now will
    only die if num_errors *and* return_type == 'num_errors'.

2011-08-23  Aki Sasaki  <aki@mozilla.com>
* Started talosrunner work.
  (Stopped updating CHANGES due to only touching new files.)

=== 0.4 ===
2011-07-24  Aki Sasaki  <aki@mozilla.com>
* scripts/mozmill_updates.py (MozmillUpdate.run_mozmill):
    Added more substrs to MozmillErrorList.

2011-07-21  Aki Sasaki  <aki@mozilla.com>
* scripts/mozmill_updates.py (MozmillUpdate.run_mozmill):
    Created report_json in work_dir, then copied to upload_dir at the end.

* scripts/mozmill_updates.py (MozmillUpdate._clobber):
    No longer mkdir_p work_dir / upload_dir.

* mozharness/base/python.py (create_virtualenv):
    Now using abspath of virtualenv_path.

* mozharness/base/script.py (BaseScript.run):
    Copied log files to upload_dir at end of run().

* mozharness/base/script.py (BaseScript.copy_to_upload_dir):
    Added max_backups, short_desc, long_desc.

* test/test_base_script.py (TestHelperFunctions._create_temp_file):
    Allowed for custom contents

2011-07-20  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/script.py (OSMixin.rmtree):
    return 0 on success, -1 on unable to remove path

* mozharness/base/script.py (BaseScript.copy_to_upload_dir):
    Quick'n'dirty.  Need to test, write tests. This has been on my todo list for a long time; glad to have it.

2011-07-19  Aki Sasaki  <aki@mozilla.com>
* scripts/mozmill_updates.py (MozmillUpdate):
    Use VirtualenvMixin and virtualenv_config_options from new mozharness/base/python.py file.
    Specify virtualenv_modules in __init__; if this diverges between versions we can move to config files.
